@@ -4,6 +4,9 @@ import br.com.zup.zupayments.dtos.login.LoginDTO;
 import br.com.zup.zupayments.models.Usuario;
 import br.com.zup.zupayments.services.UsuarioService;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -11,18 +14,13 @@ import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 public class FiltroAutencicacaoJWT extends UsernamePasswordAuthenticationFilter {
-
-    private ComponenteJWT componenteJWT;
-    private AuthenticationManager authenticationManager;
-    private UsuarioService usuarioService;
+    private final ComponenteJWT componenteJWT;
+    private final AuthenticationManager authenticationManager;
+    private final UsuarioService usuarioService;
 
     public FiltroAutencicacaoJWT(ComponenteJWT componenteJWT, AuthenticationManager authenticationManager, UsuarioService usuarioService) {
         this.componenteJWT = componenteJWT;
@@ -38,19 +36,18 @@ public class FiltroAutencicacaoJWT extends UsernamePasswordAuthenticationFilter 
             LoginDTO login = objectMapper.readValue(request.getInputStream(), LoginDTO.class);
             Usuario usuarioLogin = usuarioService.procurarUsuarioPeloEmail(login.getEmail());
             UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken
-                    (login.getEmail(), login.getSenha(), Arrays.asList(
+                    (login.getEmail(), login.getSenha(), List.of(
                             new SimpleGrantedAuthority(String.valueOf(usuarioLogin.getNivelDeAcesso()))
                     ));
 
-            Authentication auth = authenticationManager.authenticate(authToken);
-            return auth;
+            return authenticationManager.authenticate(authToken);
         } catch (IOException error) {
             throw new RuntimeException(error.getMessage());
         }
     }
 
     @Override
-    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult) throws IOException, ServletException {
+    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult) {
         String username = ((UsuarioLogin) authResult.getPrincipal()).getUsername();
         String token = componenteJWT.gerarToken(username);
         response.setHeader("Access-Control-Expose-Headers", "Authorization");
